After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672414 - Empty <style> element triggers assertions in rsvg-convert
Empty <style> element triggers assertions in rsvg-convert
Status: RESOLVED FIXED
Product: librsvg
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: librsvg maintainers
librsvg maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-19 21:09 UTC by sebastian.leske
Modified: 2012-03-19 21:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description sebastian.leske 2012-03-19 21:09:41 UTC
If an SVG file contains an empty <style> element ("<style/>"), several
assertions are triggered:

** (rsvg-convert:13649): CRITICAL **: cr_parser_new_from_buf: assertion `a_buf && a_len' failed
** (rsvg-convert:13649): CRITICAL **: cr_parser_set_sac_handler: assertion `a_this' failed
(rsvg-convert:13649): librsvg-WARNING **: Error setting CSS SAC handler
** (rsvg-convert:13649): CRITICAL **: cr_parser_destroy: assertion `a_this && PRIVATE (a_this)' failed

Testcase:

Run rsvg-convert on the following file:

<?xml version="1.0"?>
<svg>
  <defs>
    <style/>
  </defs>
</svg>

rsvg-convert version: 2.34.2 (Debian package librsvg2-bin, 2.34.2-3)
Comment 1 Christian Persch 2012-03-19 21:26:17 UTC
(Note that you have to change this to <style type="test/css" /> to repro in rsvg 2.35.2 / master.)
Comment 2 Christian Persch 2012-03-19 21:29:48 UTC
Fixed on master.