styles: Don't try parsing empty <style>

https://bugzilla.gnome.org/show_bug.cgi?id=672414